AMP-8522
git-svn-id: file:///svn/branches/AMP_1_14_RELEASE/amp@12535 9e8d75aa-d0cb-44a9-8341-a4b8ba1a38b4